Remove postinstall build script from package.json
The postinstall script that triggered a build after installing dependencies has been removed. This change prevents automatic builds during npm install.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
-        "postinstall": "npm run build"
+        "dev": "vite"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
